[feat] add tolltip component, replace original radix tooltip cause style conflict with RGL. [refactor] scrollbar style refactor due to new version of chrome does not support webkit anymore, hide all scrollbar for now. fix user select style of RGL.

--- a/app/globals.css
+++ b/app/globals.css
@@ -130,7 +130,7 @@
   }
 
   .section {
-    @apply text-input relative h-full rounded-md bg-transparent px-4 py-2;
+    @apply text-input h-full rounded-md bg-transparent px-4 py-2;
   }
 
   .btn-link {
@@ -139,10 +139,6 @@
 }
 
 @layer utilities {
-  .scrollbar {
-    scrollbar-width: thin !important;
-  }
-
   .flex-center {
     @apply flex items-center justify-center;
   }
@@ -195,6 +191,9 @@
     @apply text-zinc-900 dark:text-white;
   }
 
+  .bg-general {
+    @apply bg-gray-900 dark:bg-slate-100;
+  }
   .text-placeholder {
     @apply text-gray-300 dark:text-gray-500;
   }
