--- a/styles/RGL.css
+++ b/styles/RGL.css
@@ -10,6 +10,10 @@
   pointer-events: none;
   user-select: none;
 }
+.react-grid-item div{
+  user-select: none;
+
+}
 .react-grid-item.cssTransforms {
   transition-property: transform, width, height;
 }
